# forth

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  midi_forth  midi_forth.c  music.pkg
.github/workflows/: build-all.yml  build-test.yml  build-windows-mhs.yml  build-windows.yml  ci.yml
docs/: async-models.md  language-comparison.md  spec.md
docs/alda-midi/: README.md  TODO.md  examples.md  language-reference.md
docs/alda-midi/shared_suite/: 01_notes_basic.alda  01_notes_basic.expected  02_notes_accidentals.alda  02_notes_accidentals.expected  03_notes_durations.alda  03_notes_durations.expected  04_octaves.alda  04_octaves.expected  05_rests.alda  05_rests.expected  06_chords.alda  06_chords.expected  07_ties.alda  07_ties.expected  08_tempo.alda  08_tempo.expected  09_volume.alda  09_volume.expected  10_dynamics.alda  10_dynamics.expected  11_parts.alda  11_parts.expected  12_variables.alda  12_variables.expected  13_markers.alda  13_markers.expected  14_voices.alda  14_voices.expected  15_repeats.alda  15_repeats.expected  16_cram.alda  16_cram.expected  17_key_signature.alda  17_key_signature.expected  18_transpose.alda  18_transpose.expected  19_quantization.alda  19_quantization.expected  20_panning.alda  20_panning.expected  (+1 more)
docs/forth-midi/: README.md  api-reference.md  bracket_syntax.md  missing-forth-features.md  scales.md  sequences.md  syntax.md  tutorial.md
docs/joy-midi/: next-steps.md  primitives.md
docs/lua-midi/: README.md  api-reference.md  architecture.md  examples.md
docs/mhs-midi/: README.md  TODO.md  api-reference.md  architecture.md  examples.md  mhs-pkg-build.md  mhs-self-contained.md  mhs-standalones.md  self-contained.md
docs/midi-forth/: data_structures.md  missing-forth-features.md  syntax.md
docs/pktpy-midi/: README.md  api-reference.md  architecture.md  examples.md  yield-from.md
docs/s7-midi/: README.md  api-reference.md  architecture.md  examples.md
examples/: README.md  algebraic_joy.joy  frere_jacques.joy  ode_to_joy.joy  simple_test.joy
projects/alda-midi/: CMakeLists.txt
projects/alda-midi/include/alda/: context.h  scheduler.h
projects/alda-midi/lib/src/: parser.c
projects/alda-midi/src/: async.c  attributes.c  interpreter.c  main.c  midi_backend.c  parser.c  scanner.c  scheduler.c  tsf_backend.c
projects/alda-midi/tests/: CMakeLists.txt  test_shared_suite.c
projects/common/: CMakeLists.txt  music_theory.c  music_theory.h
projects/forth-midi/: CMakeLists.txt  context.c  dictionary.c  forth_midi.c  forth_midi.h  generative.c  interpreter.c  main.c  midi_core.c  notation.c  packed_notes.c  patterns.c  primitives.c  readline_comp.c  recording.c  scales.c  sequences.c  stack.c
projects/joy-midi/: CMakeLists.txt  joy_midi.c  main.c  midi_primitives.c  midi_primitives.h  music_notation.c  prelude.joy
projects/joy-midi/joy/: CMakeLists.txt  joy_parser.c  joy_primitives.c  joy_runtime.c  joy_runtime.h
projects/lua-midi/: CMakeLists.txt  lua_prelude.h  main.c  midi_module.c  prelude.lua  scheduler.c
projects/lua_midi/: midi_module.c
projects/mhs-midi/: CMakeLists.txt  mhs_ffi_override.c  mhs_midi_main.c  mhs_midi_standalone_main.c  midi_ffi.c  midi_ffi.h  midi_ffi_wrappers.c  vfs.c  vfs.h  vfs_unified.c  vfs_unified.h  vfs_zstd.c  vfs_zstd.h
projects/mhs-midi/examples/: Arpeggio.hs  AsyncTest.hs  Chords.hs  HelloMidi.hs  ListPorts.hs  Melody.hs
projects/mhs-midi/lib/: Async.hs  Midi.hs  MidiPerform.hs  MidiPrelude.hs  Music.hs  MusicPerform.hs  TestMusic.hs
projects/mhs_midi/: CMakeLists.txt  midi_ffi_wrappers.c
projects/mhs_midi/examples/: mysong.4th
projects/mhs_midi/lib/: MidiPrelude.hs
projects/pktpy-midi/: CMakeLists.txt  main.c  midi_module.c  prelude.py  py_prelude.h  scheduler.c  scheduler.h
projects/s7-midi/: CMakeLists.txt  midi_module.c  prelude.scm  scheduler.c  scheduler.h  scm_prelude.h
scripts/: ctidy.py  embed_libs.py  embed_libs_zstd.c  embed_libs_zstd.py  embed_pkgs.py  fluidsynth-gm.py  mhs-midi  mhs-midi-compile  mhs-midi-repl  mhs-pkg.sh  patch_eval_vfs.py
tests/: CMakeLists.txt  test_alda_midi.sh  test_forth_midi.sh  test_lua_midi.sh  test_mhs_midi.sh  test_pktpy_midi.sh  test_s7_async.scm  test_s7_midi.sh
tests/examples/: DemoMhs.hs  demo_alda.alda  demo_forth.4th  demo_lua.lua  demo_pktpy.py  demo_s7.scm
tests/joy-midi/: CMakeLists.txt  run_joy_tests.sh  run_single_joy_test.sh  timing_test.joy  timing_test.sh
